compliance/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: symmorfosi
  labels:
    name: symmorfosi
    istio-injection: disabled
