compliance/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: compliance-api
  name: compliance-api
  namespace: symmorfosi
spec:
  type: ClusterIP
  ports:
    - name: api-port
      port: 3000
      targetPort: 3000
  selector:
    app: compliance-api
