compliance/watcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: compliance-watcher
  name: compliance-watcher
  namespace: symmorfosi
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: compliance-watcher
