compliance/api-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: compliance-api
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /compliance/graphql
      route:
        - destination:
            host: compliance-api.symmorfosi.svc.cluster.local
            port:
              number: 3000
