compliance/github-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: github
spec:
  hosts:
    - raw.githubusercontent.com
    - api.github.com
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: github
spec:
  hosts:
    - raw.githubusercontent.com
    - api.github.com
  tls:
    - match:
        - port: 443
          sni_hosts:
            - raw.githubusercontent.com
      route:
        - destination:
            host: raw.githubusercontent.com
            port:
              number: 443
          weight: 100
    - match:
        - port: 443
          sni_hosts:
            - api.github.com
      route:
        - destination:
            host: api.github.com
            port:
              number: 443
          weight: 100
